<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

    <!-- Statis Profile TextView -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:fontFamily="@font/sundaymilk"
        android:background="@color/material_dynamic_primary10"
        android:textColor="@color/material_dynamic_neutral_variant80"
        android:text="PROFILE"
        android:textSize="40sp"
        android:paddingVertical="10dp"/>

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="62dp"> <!-- Adjust this margin to avoid overlap with the static TextView -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="263dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fotoprofil" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/brightpeony"
                android:text="Tri Sutrisno"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_marginTop="40dp"
                android:text="NIM               :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_marginTop="10dp"
                android:text="NAMA           :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_marginTop="10dp"
                android:text="ALAMAT       :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_marginTop="15dp"
                android:text="UMUR           :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:layout_marginTop="10dp"
                android:text="HOBI             :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:layout_marginTop="10dp"
                android:text="CITA - CITA :"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-20dp"
                android:text="@string/nim" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-18dp"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="107dp"
                android:layout_marginTop="9dp"
                android:text="@string/alamat" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-18dp"
                android:text="@string/umur" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-20dp"
                android:text="@string/hobi" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView12"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-19dp"
                android:text="@string/cita" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="269dp"
                android:layout_height="29dp"
                android:layout_below="@id/textView14"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/brightpeony"
                android:text="Find Me On Social Media"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView15"
                android:layout_marginTop="80dp"
                android:text="" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="79dp"
                android:layout_height="66dp"
                android:layout_below="@id/textView15"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/bangun" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="79dp"
                android:layout_height="66dp"
                android:layout_below="@id/textView15"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/instagram" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="79dp"
                android:layout_height="66dp"
                android:layout_below="@id/textView15"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="215dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/github" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="79dp"
                android:layout_height="66dp"
                android:layout_below="@id/textView15"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="315dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/tiktok" />

            <TextView
                android:id="@+id/Locate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:fontFamily="@font/brightpeony"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Find Me On Maps"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="79dp"
                android:layout_height="66dp"
                android:layout_below="@id/Locate"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/maps" />

            <TextView
                android:id="@+id/About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView8"
                android:fontFamily="@font/brightpeony"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="About"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/AboutDesc"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/About"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textSize="15dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/Kosong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/AboutDesc"
                android:fontFamily="@font/brightpeony"
                android:layout_marginTop="130dp"
                android:text="Find Me On Maps"
                android:textSize="25dp" />





        </RelativeLayout>
    </ScrollView>
</FrameLayout>

