<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:background="@color/material_dynamic_primary10"
        android:textColor="@color/material_dynamic_neutral_variant80"
        android:fontFamily="@font/sundaymilk"
        android:text="HOME"
        android:textSize="40dp"
        android:paddingVertical="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="63dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="22dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="263dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fotoprofil" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/brightpeony"
                android:text="TRI SUTRISNO"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilmoray"
                android:text="Deskripsi"
                android:textAlignment="center"
                android:layout_marginLeft="15dp"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/textVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilmoray"
                android:text=""
                android:textAlignment="center"
                android:textSize="10sp" />

            <!-- NIM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NIM            :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10121257" />
            </LinearLayout>

            <!-- Nama -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NAMA        :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama" />
            </LinearLayout>

            <!-- Alamat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ALAMAT    :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat" />
            </LinearLayout>

            <!-- Umur -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UMUR         :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umur" />
            </LinearLayout>

            <!-- Agama -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AGAMA      :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Islam" />
            </LinearLayout>

            <!-- Semester -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER:"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6 (Enam)" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilmoray"
                android:text="Ketertarikan"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/textVi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilmoray"
                android:text=""
                android:textAlignment="center"
                android:textSize="10sp" />

            <!-- Hobi -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HOBI                   :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bermain Game, Bermain Musik" />
            </LinearLayout>

            <!-- Makes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAKES               :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sambal Goreng Kentang" />
            </LinearLayout>

            <!-- Mikes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MIKES                 :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nutrisari Milky Orange" />
            </LinearLayout>

            <!-- Ketertarikan -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KETERTARIKAN :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dunia E-Sports, Konser" />

            </LinearLayout>

            <!-- Cita-cita -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CITA - CITA         :"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Developer Game di Ubisoft" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="8dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>

